@@ -1,3 +1,7 @@
+2019-12-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Clear expression entry when escape key is pressed
+
 2019-11-08 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Do not automatically recalculate expressions with answer variables when calculation/parsing mode has changed
